--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     
-    <title>Vite + React + TS</title>
+    <title>Coffe delivery - @joaonaif</title>
   </head>
   <body>
     <div id="root"></div>
